--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="">お問い合わせ</a></li>
   </ul>
   <img src="mv.png/mv.png" alt="">
-  <p>最新のテクノロジーで<span style="font-style: italic;">社会課題</span>を解決</p>
+  <p>最新のテクノロジーで<i>社会課題</i>を解決</p>
   <div>
   <h2>会社概要</h2>
   <table>
